# gk1000

./: .gitignore  Cargo.toml  PKGBUILD  README.md
app/: Cargo.toml
app/src/: main.rs
data/: gk1000.rules
gk1000_controller/: Cargo.toml
gk1000_controller/src/: hid_wrapper.rs  lib.rs  rgb_controller.rs
gk1000_controller/src/hid_wrapper/: constants.rs  error.rs  wrapper.rs
gk1000_controller/src/rgb_controller/: controller.rs  effect_info.rs  effects.rs
gk1000ctl/: Cargo.toml
gk1000ctl/src/: color.rs  commands.rs  completions.rs  error_handler.rs  main.rs
